		* Added Hungarian man pages.
		* Fixed sorting in web interface.

		**** For users, who already got used to amulecmd's or amuleweb's
		**** command-line parameters: PLEASE READ DOCUMENTATION CAREFULLY!

	Hetfield:
		* New popup menu and events management for new wx SysTray
		* Speed Bar color (on the new wxTray) is setted in the statistics color selection 
		  (as old GTK tray!)

	Kry:
		* New SysTray Core written in wxWidgets (portable and transparent icon)
		* A lot
		* More to come...

	Ken:
		* Fixed Mac bug: window was a little larger each restart
		* Fixed aMule.tmpl so Safari can work with amuleweb
		* On Mac, enabled Command-clicking in lists to toggle selection
		* Solved the DECLARE_ABSTRACT_CLASS() mystery on wx-2.4.2. Now
		we can have UDP socks5 with wx-2.4.2.
		* Included CVSDATE with version in amulesig.dat
		* Fixed an endianness bug with webserver
		* Fixed last (I hope!) endianness bug with IPFilter
		* Fixed a major endianness bug with widespread effects.  On Mac,
		  servers don't fail continuously until eventually removed from the
		  list; server pings work.  Global search seems to work better.
		  DNS lookup of servers and ED2K link sources should now work.

	lfroen:
		* aMule remote gui implementation
		* EC additions
		* RLE encoder for shared files

	ObsessionAl:
		* Patch to include CVS date in about box.

	Phoenix:
		* Fixed crash in CClientReqSocket::ProcessExtPacket()
		processing of OP_COMPRESSEDPART.
		* More UNICODE fixes.
		* Fixed WX_SYSTRAY compilation on wx-2.4.2.
		* More proxy updates, we are getting there.
		* Small UI bug: double click on a server did not change the
		"Connect" button to "Cancel".
		* Changed some deprecated IsKindOf(CLASSINFO()) to
		wxDynamicCast().
		* Fixed crash in CUpDownClient::SendFileRequest(), short
		circuit evaluation was reversed.
		* Created Proxy dialog on preferences.
		* Updated muuli.wdr for wxDesigner version 2.11 -- no more
		manual patching for wxFIXED_MINSIZE required.